--- a/index.html
+++ b/index.html
@@ -6,22 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <title>Historial de la Copa America</title>
+    <title>Historial de la Copa América</title>
 </head>
 <body>
     <header>
        
-        <h1 >Historial Copa America</h1>
+        <h1 >Historial Copa América</h1>
         <nav>
             <ul>
               <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Newsletter</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
         </nav>
-        <p class="clase_destacada">Esta parrafo es destacado es destacado por CLASS</p>
-        <h2>Este es un titulo h2</h2>
+        <p class="clase_destacada">El siguiente sitio web, se destaca los ultimos campeones de la Copa América</p>
+        <h2>Historial</h2>
         <p id="destacado"> Este es un parrafo destacado por ID</p>
     </header>
     <div class="carousel-item">
@@ -37,4 +35,5 @@
             <h3> Chile 2016 </h3>
     </div>
     </body>
+    <footer>Realizado por Maximiliano Baez</footer>
 </html>
