--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
         <p class="clase_destacada">El siguiente sitio web, se destaca los ultimos campeones de la Copa América</p>
         <h2>Historial</h2>
-        <p id="destacado"> Este es un parrafo destacado por ID</p>
+        <p id="destacado"> SELECCIONES CAMPEONAS</p>
     </header>
     <div class="carousel-item">
     <a title="Argentina Campeon" href="https://es.wikipedia.org/wiki/Argentina_en_la_Copa_Am%C3%A9rica_2021"><img src="/imagenes/argentina.jpg" alt="Argentina Campeon">
